[package]
name = "yew-todo-mvc"
version = "0.1.0"
authors = ["rusttodomvc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
yew-router = "0.14.0"
wasm-bindgen = "0.2.67"
web-sys = { version = "0.3.44", features = ["Window", "Storage"] }
serde = "1.0.115"
serde_json = "1.0.57"
